# nsg-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: NumericalSemigroup.rs  main.rs
