[package]
name = "cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
itertools = "0.12.1"
par-map = "0.1.4"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }

